--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_URL=/api/v1
 JWT_SECRET=asmaaalshimaadoaanada
 PORT=5000
-MONGODB_URL=mongodb+srv://admin:admin12345678@cluster0.h6ubg.mongodb.net/eshop?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://bkngadventure:asmaaalshimaadoaanada@bookingadventure.9zvxs.mongodb.net/?retryWrites=true&w=majority&appName=bookingadventure
 
