--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 API_URL=api/v1
 JWT_SECRET=asmaaalshimaadoaanada
 PORT=5001
+CLOUDINARY_CLOUD_NAME=drmlj7b0r
+CLOUDINARY_API_KEY=422356353321975
+CLOUDINARY_API_SECRET=pactQ3ChKo2pxM4wuc8w_a3tPB0
 MONGODB_URL=mongodb+srv://bkngadventure:asmaaalshimaadoaanada@bookingadventure.9zvxs.mongodb.net/?retryWrites=true&w=majority&appName=bookingadventure
 
